@@ -1,3 +1,7 @@
+2009-11-15 Harri Pitkänen <hatapitk@iki.fi>
+	* Accept "A-rapussa" in grammar checker.
+	* Read speller configuration from dictionary description.
+
 2009-11-14 Harri Pitkänen <hatapitk@iki.fi>
 	* Add interface Speller and implement it in
 	  AnalyzerToSpellerAdapter.
